[package]
name = "stateful"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[lib]
name = "stateful"
plugin = true

[features]
default = ["unstable"]
impl_trait = []
unstable = []
unstable-testing = ["clippy", "compiletest_rs", "impl_trait"]

[dependencies]
aster = "^0.26.0"
clippy = { version = "0.*", optional = true }
compiletest_rs = { version = "^0.2.1", optional = true }
#env_logger = "0.3.4"
futures = "0.1.1"
futures-cpupool = "0.1.1"
#futures = { git = "https://github.com/alexcrichton/futures-rs" }
#futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
#log = "0.3.6"
#tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
#tokio-line = { git = "https://github.com/tokio-rs/tokio-line" }
#tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
