[package]
name = "stateful"
version = "0.1.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]

[lib]
name = "stateful"
plugin = true

[features]
default = ["unstable"]
impl_trait = []
unstable = []
unstable-testing = ["clippy", "compiletest_rs", "impl_trait"]

[dependencies]
aster = "^0.29.0"
bit-vec = "0.4.3"
clippy = { version = "0.*", optional = true }
compiletest_rs = { version = "^0.2.1", optional = true }
futures = "0.1.1"
futures-cpupool = "0.1.1"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
